Add pagination bar at page top

--- a/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/Index_ForLastPage_ReturnsCorrectPagingBar.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/Index_ForLastPage_ReturnsCorrectPagingBar.html
@@ -52,6 +52,20 @@
 
 
 
+
+    <nav aria-label="Movies pages">
+        <ul class="pagination justify-content-center">
+            <li class="page-item "><a class="page-link" href="/MoviesToSee/page-9">Prev</a></li>
+
+            <li class="page-item "><a class="page-link" href="/MoviesToSee">1</a></li>
+        <li class="page-item disabled"><span class="page-link">...</span></li>
+            <li class="page-item "><a class="page-link" href="/MoviesToSee/page-9">9</a></li>
+            <li class="page-item active"><a class="page-link" href="/MoviesToSee/page-10">10</a></li>
+
+        <li class="page-item disabled"><span class="page-link">Next</span></li>
+        </ul>
+    </nav>
+
     <ul class="movies-list">
             <li id="movie-000000000000000000000019" class="movies-list-item">
                 <div class="movie-info-and-actions">
