--- a/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/Index_ForMiddlePage_ReturnsCorrectPagingBar.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/Index_ForMiddlePage_ReturnsCorrectPagingBar.html
@@ -52,6 +52,23 @@
 
 
 
+
+    <nav aria-label="Movies pages">
+        <ul class="pagination justify-content-center">
+            <li class="page-item "><a class="page-link" href="/MoviesToSee/page-4">Prev</a></li>
+
+            <li class="page-item "><a class="page-link" href="/MoviesToSee">1</a></li>
+        <li class="page-item disabled"><span class="page-link">...</span></li>
+            <li class="page-item "><a class="page-link" href="/MoviesToSee/page-4">4</a></li>
+            <li class="page-item active"><a class="page-link" href="/MoviesToSee/page-5">5</a></li>
+            <li class="page-item "><a class="page-link" href="/MoviesToSee/page-6">6</a></li>
+        <li class="page-item disabled"><span class="page-link">...</span></li>
+            <li class="page-item "><a class="page-link" href="/MoviesToSee/page-10">10</a></li>
+
+            <li class="page-item "><a class="page-link" href="/MoviesToSee/page-6">Next</a></li>
+        </ul>
+    </nav>
+
     <ul class="movies-list">
             <li id="movie-000000000000000000000009" class="movies-list-item">
                 <div class="movie-info-and-actions">
