--- a/tests/MovieLibrary.IntegrationTests/snapshots/IdentityTests/GetLogin_ForUnauthenticatedUser_ReturnsCorrectPage.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/IdentityTests/GetLogin_ForUnauthenticatedUser_ReturnsCorrectPage.html
@@ -41,31 +41,31 @@
     <div class="col-md-4">
         <section>
             <form id="account" method="post">
-                <h4>Use a local account to log in.</h4>
+                <h2>Use a local account to log in.</h2>
                 <hr />
                 
-                <div class="form-group">
-                    <label for="Input_Email">Email</label>
-                    <input class="form-control" autocomplete="username" type="email" data-val="true" data-val-email="The Email field is not a valid e-mail address." data-val-required="The Email field is required." id="Input_Email" name="Input.Email" value="" />
+                <div class="form-floating">
+                    <input class="form-control" autocomplete="username" aria-required="true" type="email" data-val="true" data-val-email="The Email field is not a valid e-mail address." data-val-required="The Email field is required." id="Input_Email" name="Input.Email" value="" />
+                    <label class="form-label" for="Input_Email">Email</label>
                     <span class="text-danger field-validation-valid" data-valmsg-for="Input.Email" data-valmsg-replace="true"></span>
                 </div>
-                <div class="form-group">
-                    <label for="Input_Password">Password</label>
-                    <input class="form-control" autocomplete="current-password" type="password" data-val="true" data-val-required="The Password field is required." id="Input_Password" name="Input.Password" />
+                <div class="form-floating">
+                    <input class="form-control" autocomplete="current-password" aria-required="true" type="password" data-val="true" data-val-required="The Password field is required." id="Input_Password" name="Input.Password" />
+                    <label class="form-label" for="Input_Password">Password</label>
                     <span class="text-danger field-validation-valid" data-valmsg-for="Input.Password" data-valmsg-replace="true"></span>
                 </div>
-                <div class="form-group">
+                <div>
                     <div class="checkbox">
-                        <label for="Input_RememberMe">
-                            <input type="checkbox" data-val="true" data-val-required="The Remember me? field is required." id="Input_RememberMe" name="Input.RememberMe" value="true" />
+                        <label class="form-label" for="Input_RememberMe">
+                            <input class="form-check-input" type="checkbox" data-val="true" data-val-required="The Remember me? field is required." id="Input_RememberMe" name="Input.RememberMe" value="true" />
                             Remember me?
                         </label>
                     </div>
                 </div>
-                <div class="form-group">
-                    <button id="login-submit" type="submit" class="btn btn-primary">Log in</button>
+                <div>
+                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
                 </div>
-                <div class="form-group">
+                <div>
                     <p>
                         <a id="forgot-password" href="/Identity/Account/ForgotPassword">Forgot your password?</a>
                     </p>
@@ -81,7 +81,7 @@
     </div>
     <div class="col-md-6 col-md-offset-2">
         <section>
-            <h4>Use another service to log in.</h4>
+            <h3>Use another service to log in.</h3>
             <hr />
                     <div>
                         <p>
