Extend movie info with country list

--- a/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToGetControllerTests/AddMovie_ForLimitedUser_AddsMovieCorrectly.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToGetControllerTests/AddMovie_ForLimitedUser_AddsMovieCorrectly.html
@@ -90,6 +90,12 @@
                     <td class="movie-info-table-value">1994</td>
                 </tr>
                 <tr>
+                    <td class="movie-info-table-key">Countries</td>
+                    <td class="movie-info-table-value">
+            <span>&#x421;&#x428;&#x410;</span>
+                    </td>
+                </tr>
+                <tr>
                     <td class="movie-info-table-key">Genres</td>
                     <td class="movie-info-table-value">
             <span>&#x442;&#x440;&#x438;&#x43B;&#x43B;&#x435;&#x440;</span>
@@ -164,6 +170,12 @@
                     <td class="movie-info-table-value">N/A</td>
                 </tr>
                 <tr>
+                    <td class="movie-info-table-key">Countries</td>
+                    <td class="movie-info-table-value">
+            <span>N/A</span>
+                    </td>
+                </tr>
+                <tr>
                     <td class="movie-info-table-key">Genres</td>
                     <td class="movie-info-table-value">
             <span>N/A</span>
@@ -214,6 +226,12 @@
                 <tr>
                     <td class="movie-info-table-key">Year</td>
                     <td class="movie-info-table-value">2008</td>
+                </tr>
+                <tr>
+                    <td class="movie-info-table-key">Countries</td>
+                    <td class="movie-info-table-value">
+            <span>N/A</span>
+                    </td>
                 </tr>
                 <tr>
                     <td class="movie-info-table-key">Genres</td>
