--- a/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToGetControllerTests/ConfirmMovieAdding_ForLimitedUser_ReturnsCorrectPage.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToGetControllerTests/ConfirmMovieAdding_ForLimitedUser_ReturnsCorrectPage.html
@@ -66,6 +66,14 @@
                     <td class="movie-info-table-value">2008</td>
                 </tr>
                 <tr>
+                    <td class="movie-info-table-key">Countries</td>
+                    <td class="movie-info-table-value">
+            <span>&#x421;&#x428;&#x410;</span>
+                ,
+            <span>&#x412;&#x435;&#x43B;&#x438;&#x43A;&#x43E;&#x431;&#x440;&#x438;&#x442;&#x430;&#x43D;&#x438;&#x44F;</span>
+                    </td>
+                </tr>
+                <tr>
                     <td class="movie-info-table-key">Genres</td>
                     <td class="movie-info-table-value">
             <span>&#x444;&#x430;&#x43D;&#x442;&#x430;&#x441;&#x442;&#x438;&#x43A;&#x430;</span>
@@ -138,6 +146,8 @@
     <input type="hidden" data-val="true" data-val-number="The field RatingValue must be a number." id="RatingValue" name="RatingValue" value="8.499" />
     <input type="hidden" id="RatingVotesNumber" name="RatingVotesNumber" value="467198" />
     <input type="hidden" id="Duration" name="Duration" value="02:32:00" />
+        <input type="hidden" id="Countries_0_" name="Countries[0]" value="&#x421;&#x428;&#x410;" />
+        <input type="hidden" id="Countries_1_" name="Countries[1]" value="&#x412;&#x435;&#x43B;&#x438;&#x43A;&#x43E;&#x431;&#x440;&#x438;&#x442;&#x430;&#x43D;&#x438;&#x44F;" />
         <input type="hidden" id="Genres_0_" name="Genres[0]" value="&#x444;&#x430;&#x43D;&#x442;&#x430;&#x441;&#x442;&#x438;&#x43A;&#x430;" />
         <input type="hidden" id="Genres_1_" name="Genres[1]" value="&#x431;&#x43E;&#x435;&#x432;&#x438;&#x43A;" />
         <input type="hidden" id="Genres_2_" name="Genres[2]" value="&#x442;&#x440;&#x438;&#x43B;&#x43B;&#x435;&#x440;" />
