--- a/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToGetControllerTests/ConfirmMovieAdding_ForInvalidModel_ReturnsCorrectPage.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToGetControllerTests/ConfirmMovieAdding_ForInvalidModel_ReturnsCorrectPage.html
@@ -89,6 +89,12 @@
                     <td class="movie-info-table-value">1994</td>
                 </tr>
                 <tr>
+                    <td class="movie-info-table-key">Countries</td>
+                    <td class="movie-info-table-value">
+            <span>&#x421;&#x428;&#x410;</span>
+                    </td>
+                </tr>
+                <tr>
                     <td class="movie-info-table-key">Genres</td>
                     <td class="movie-info-table-value">
             <span>&#x442;&#x440;&#x438;&#x43B;&#x43B;&#x435;&#x440;</span>
@@ -167,6 +173,12 @@
                 <tr>
                     <td class="movie-info-table-key">Year</td>
                     <td class="movie-info-table-value">N/A</td>
+                </tr>
+                <tr>
+                    <td class="movie-info-table-key">Countries</td>
+                    <td class="movie-info-table-value">
+            <span>N/A</span>
+                    </td>
                 </tr>
                 <tr>
                     <td class="movie-info-table-key">Genres</td>
