--- a/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/AddMovie_ForPrivilegedUserAndMovieWithAllInfoMissing_AddsMovieCorrectly.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/AddMovie_ForPrivilegedUserAndMovieWithAllInfoMissing_AddsMovieCorrectly.html
@@ -96,6 +96,16 @@
                     <td class="movie-info-table-value">2000</td>
                 </tr>
                 <tr>
+                    <td class="movie-info-table-key">Countries</td>
+                    <td class="movie-info-table-value">
+            <span>&#x421;&#x428;&#x410;</span>
+                ,
+            <span>&#x412;&#x435;&#x43B;&#x438;&#x43A;&#x43E;&#x431;&#x440;&#x438;&#x442;&#x430;&#x43D;&#x438;&#x44F;</span>
+                ,
+            <span>&#x41C;&#x430;&#x43B;&#x44C;&#x442;&#x430;</span>
+                    </td>
+                </tr>
+                <tr>
                     <td class="movie-info-table-key">Genres</td>
                     <td class="movie-info-table-value">
             <span>&#x431;&#x43E;&#x435;&#x432;&#x438;&#x43A;</span>
@@ -173,6 +183,12 @@
                     <td class="movie-info-table-value">N/A</td>
                 </tr>
                 <tr>
+                    <td class="movie-info-table-key">Countries</td>
+                    <td class="movie-info-table-value">
+            <span>N/A</span>
+                    </td>
+                </tr>
+                <tr>
                     <td class="movie-info-table-key">Genres</td>
                     <td class="movie-info-table-value">
             <span>N/A</span>
@@ -229,6 +245,12 @@
                 <tr>
                     <td class="movie-info-table-key">Year</td>
                     <td class="movie-info-table-value">N/A</td>
+                </tr>
+                <tr>
+                    <td class="movie-info-table-key">Countries</td>
+                    <td class="movie-info-table-value">
+            <span>N/A</span>
+                    </td>
                 </tr>
                 <tr>
                     <td class="movie-info-table-key">Genres</td>
