--- a/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/DeleteMovie_ForPrivilegedUser_DeletesMovieCorrectly.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/DeleteMovie_ForPrivilegedUser_DeletesMovieCorrectly.html
@@ -96,6 +96,12 @@
                     <td class="movie-info-table-value">N/A</td>
                 </tr>
                 <tr>
+                    <td class="movie-info-table-key">Countries</td>
+                    <td class="movie-info-table-value">
+            <span>N/A</span>
+                    </td>
+                </tr>
+                <tr>
                     <td class="movie-info-table-key">Genres</td>
                     <td class="movie-info-table-value">
             <span>N/A</span>
