--- a/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/Index_ForLastPage_ReturnsCorrectPagingBar.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/Index_ForLastPage_ReturnsCorrectPagingBar.html
@@ -83,6 +83,12 @@
                     <td class="movie-info-table-value">N/A</td>
                 </tr>
                 <tr>
+                    <td class="movie-info-table-key">Countries</td>
+                    <td class="movie-info-table-value">
+            <span>N/A</span>
+                    </td>
+                </tr>
+                <tr>
                     <td class="movie-info-table-key">Genres</td>
                     <td class="movie-info-table-value">
             <span>N/A</span>
@@ -133,6 +139,12 @@
                 <tr>
                     <td class="movie-info-table-key">Year</td>
                     <td class="movie-info-table-value">N/A</td>
+                </tr>
+                <tr>
+                    <td class="movie-info-table-key">Countries</td>
+                    <td class="movie-info-table-value">
+            <span>N/A</span>
+                    </td>
                 </tr>
                 <tr>
                     <td class="movie-info-table-key">Genres</td>
