--- a/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToGetControllerTests/AddMovie_ForPrivilegedUserAndMovieWithAllInfoMissing_AddsMovieCorrectly.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToGetControllerTests/AddMovie_ForPrivilegedUserAndMovieWithAllInfoMissing_AddsMovieCorrectly.html
@@ -98,34 +98,22 @@
                 <tr>
                     <td class="movie-info-table-key">Countries</td>
                     <td class="movie-info-table-value">
-            <span>&#x421;&#x428;&#x410;</span>
-                    </td>
+            <span>&#x421;&#x428;&#x410;</span>                    </td>
                 </tr>
                 <tr>
                     <td class="movie-info-table-key">Genres</td>
                     <td class="movie-info-table-value">
-            <span>&#x442;&#x440;&#x438;&#x43B;&#x43B;&#x435;&#x440;</span>
-                ,
-            <span>&#x43A;&#x43E;&#x43C;&#x435;&#x434;&#x438;&#x44F;</span>
-                ,
-            <span>&#x43A;&#x440;&#x438;&#x43C;&#x438;&#x43D;&#x430;&#x43B;</span>
-                    </td>
+            <span>&#x442;&#x440;&#x438;&#x43B;&#x43B;&#x435;&#x440;</span>,            <span>&#x43A;&#x43E;&#x43C;&#x435;&#x434;&#x438;&#x44F;</span>,            <span>&#x43A;&#x440;&#x438;&#x43C;&#x438;&#x43D;&#x430;&#x43B;</span>                    </td>
                 </tr>
                 <tr>
                     <td class="movie-info-table-key">Director</td>
                     <td class="movie-info-table-value">
-            <span>&#x41A;&#x432;&#x435;&#x43D;&#x442;&#x438;&#x43D; &#x422;&#x430;&#x440;&#x430;&#x43D;&#x442;&#x438;&#x43D;&#x43E;</span>
-                    </td>
+            <span>&#x41A;&#x432;&#x435;&#x43D;&#x442;&#x438;&#x43D; &#x422;&#x430;&#x440;&#x430;&#x43D;&#x442;&#x438;&#x43D;&#x43E;</span>                    </td>
                 </tr>
                 <tr>
                     <td class="movie-info-table-key">Cast</td>
                     <td class="movie-info-table-value">
-            <span>&#x414;&#x436;&#x43E;&#x43D; &#x422;&#x440;&#x430;&#x432;&#x43E;&#x43B;&#x442;&#x430;</span>
-                ,
-            <span>&#x421;&#x44D;&#x43C;&#x44E;&#x44D;&#x43B; &#x41B;. &#x414;&#x436;&#x435;&#x43A;&#x441;&#x43E;&#x43D;</span>
-                ,
-            <span>&#x411;&#x440;&#x44E;&#x441; &#x423;&#x438;&#x43B;&#x43B;&#x438;&#x441;</span>
-                    </td>
+            <span>&#x414;&#x436;&#x43E;&#x43D; &#x422;&#x440;&#x430;&#x432;&#x43E;&#x43B;&#x442;&#x430;</span>,            <span>&#x421;&#x44D;&#x43C;&#x44E;&#x44D;&#x43B; &#x41B;. &#x414;&#x436;&#x435;&#x43A;&#x441;&#x43E;&#x43D;</span>,            <span>&#x411;&#x440;&#x44E;&#x441; &#x423;&#x438;&#x43B;&#x43B;&#x438;&#x441;</span>                    </td>
                 </tr>
                 <tr>
                     <td class="movie-info-table-key">Rating</td>
@@ -184,26 +172,22 @@
                 <tr>
                     <td class="movie-info-table-key">Countries</td>
                     <td class="movie-info-table-value">
-            <span>N/A</span>
-                    </td>
+            <span>N/A</span>                    </td>
                 </tr>
                 <tr>
                     <td class="movie-info-table-key">Genres</td>
                     <td class="movie-info-table-value">
-            <span>N/A</span>
-                    </td>
+            <span>N/A</span>                    </td>
                 </tr>
                 <tr>
                     <td class="movie-info-table-key">Director</td>
                     <td class="movie-info-table-value">
-            <span>N/A</span>
-                    </td>
+            <span>N/A</span>                    </td>
                 </tr>
                 <tr>
                     <td class="movie-info-table-key">Cast</td>
                     <td class="movie-info-table-value">
-            <span>N/A</span>
-                    </td>
+            <span>N/A</span>                    </td>
                 </tr>
                 <tr>
                     <td class="movie-info-table-key">Rating</td>
@@ -248,26 +232,22 @@
                 <tr>
                     <td class="movie-info-table-key">Countries</td>
                     <td class="movie-info-table-value">
-            <span>N/A</span>
-                    </td>
+            <span>N/A</span>                    </td>
                 </tr>
                 <tr>
                     <td class="movie-info-table-key">Genres</td>
                     <td class="movie-info-table-value">
-            <span>N/A</span>
-                    </td>
+            <span>N/A</span>                    </td>
                 </tr>
                 <tr>
                     <td class="movie-info-table-key">Director</td>
                     <td class="movie-info-table-value">
-            <span>N/A</span>
-                    </td>
+            <span>N/A</span>                    </td>
                 </tr>
                 <tr>
                     <td class="movie-info-table-key">Cast</td>
                     <td class="movie-info-table-value">
-            <span>N/A</span>
-                    </td>
+            <span>N/A</span>                    </td>
                 </tr>
                 <tr>
                     <td class="movie-info-table-key">Rating</td>
