--- a/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/AddMovie_ForPrivilegedUserAndMovieWithAllInfoFilled_AddsMovieCorrectly.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/AddMovie_ForPrivilegedUserAndMovieWithAllInfoFilled_AddsMovieCorrectly.html
@@ -98,38 +98,22 @@
                 <tr>
                     <td class="movie-info-table-key">Countries</td>
                     <td class="movie-info-table-value">
-            <span>&#x421;&#x428;&#x410;</span>
-                ,
-            <span>&#x412;&#x435;&#x43B;&#x438;&#x43A;&#x43E;&#x431;&#x440;&#x438;&#x442;&#x430;&#x43D;&#x438;&#x44F;</span>
-                ,
-            <span>&#x41C;&#x430;&#x43B;&#x44C;&#x442;&#x430;</span>
-                    </td>
+            <span>&#x421;&#x428;&#x410;</span>,            <span>&#x412;&#x435;&#x43B;&#x438;&#x43A;&#x43E;&#x431;&#x440;&#x438;&#x442;&#x430;&#x43D;&#x438;&#x44F;</span>,            <span>&#x41C;&#x430;&#x43B;&#x44C;&#x442;&#x430;</span>                    </td>
                 </tr>
                 <tr>
                     <td class="movie-info-table-key">Genres</td>
                     <td class="movie-info-table-value">
-            <span>&#x431;&#x43E;&#x435;&#x432;&#x438;&#x43A;</span>
-                ,
-            <span>&#x438;&#x441;&#x442;&#x43E;&#x440;&#x438;&#x44F;</span>
-                ,
-            <span>&#x434;&#x440;&#x430;&#x43C;&#x430;</span>
-                    </td>
+            <span>&#x431;&#x43E;&#x435;&#x432;&#x438;&#x43A;</span>,            <span>&#x438;&#x441;&#x442;&#x43E;&#x440;&#x438;&#x44F;</span>,            <span>&#x434;&#x440;&#x430;&#x43C;&#x430;</span>                    </td>
                 </tr>
                 <tr>
                     <td class="movie-info-table-key">Director</td>
                     <td class="movie-info-table-value">
-            <span>&#x420;&#x438;&#x434;&#x43B;&#x438; &#x421;&#x43A;&#x43E;&#x442;&#x442;</span>
-                    </td>
+            <span>&#x420;&#x438;&#x434;&#x43B;&#x438; &#x421;&#x43A;&#x43E;&#x442;&#x442;</span>                    </td>
                 </tr>
                 <tr>
                     <td class="movie-info-table-key">Cast</td>
                     <td class="movie-info-table-value">
-            <span>&#x420;&#x430;&#x441;&#x441;&#x435;&#x43B; &#x41A;&#x440;&#x43E;&#x443;</span>
-                ,
-            <span>&#x425;&#x43E;&#x430;&#x43A;&#x438;&#x43D; &#x424;&#x435;&#x43D;&#x438;&#x43A;&#x441;</span>
-                ,
-            <span>&#x41A;&#x43E;&#x43D;&#x43D;&#x438; &#x41D;&#x438;&#x43B;&#x44C;&#x441;&#x435;&#x43D;</span>
-                    </td>
+            <span>&#x420;&#x430;&#x441;&#x441;&#x435;&#x43B; &#x41A;&#x440;&#x43E;&#x443;</span>,            <span>&#x425;&#x43E;&#x430;&#x43A;&#x438;&#x43D; &#x424;&#x435;&#x43D;&#x438;&#x43A;&#x441;</span>,            <span>&#x41A;&#x43E;&#x43D;&#x43D;&#x438; &#x41D;&#x438;&#x43B;&#x44C;&#x441;&#x435;&#x43D;</span>                    </td>
                 </tr>
                 <tr>
                     <td class="movie-info-table-key">Rating</td>
@@ -185,26 +169,22 @@
                 <tr>
                     <td class="movie-info-table-key">Countries</td>
                     <td class="movie-info-table-value">
-            <span>N/A</span>
-                    </td>
+            <span>N/A</span>                    </td>
                 </tr>
                 <tr>
                     <td class="movie-info-table-key">Genres</td>
                     <td class="movie-info-table-value">
-            <span>N/A</span>
-                    </td>
+            <span>N/A</span>                    </td>
                 </tr>
                 <tr>
                     <td class="movie-info-table-key">Director</td>
                     <td class="movie-info-table-value">
-            <span>N/A</span>
-                    </td>
+            <span>N/A</span>                    </td>
                 </tr>
                 <tr>
                     <td class="movie-info-table-key">Cast</td>
                     <td class="movie-info-table-value">
-            <span>N/A</span>
-                    </td>
+            <span>N/A</span>                    </td>
                 </tr>
                 <tr>
                     <td class="movie-info-table-key">Rating</td>
@@ -249,34 +229,22 @@
                 <tr>
                     <td class="movie-info-table-key">Countries</td>
                     <td class="movie-info-table-value">
-            <span>N/A</span>
-                    </td>
+            <span>N/A</span>                    </td>
                 </tr>
                 <tr>
                     <td class="movie-info-table-key">Genres</td>
                     <td class="movie-info-table-value">
-            <span>&#x444;&#x430;&#x43D;&#x442;&#x430;&#x441;&#x442;&#x438;&#x43A;&#x430;</span>
-                ,
-            <span>&#x431;&#x43E;&#x435;&#x432;&#x438;&#x43A;</span>
-                ,
-            <span>&#x442;&#x440;&#x438;&#x43B;&#x43B;&#x435;&#x440;</span>
-                    </td>
+            <span>&#x444;&#x430;&#x43D;&#x442;&#x430;&#x441;&#x442;&#x438;&#x43A;&#x430;</span>,            <span>&#x431;&#x43E;&#x435;&#x432;&#x438;&#x43A;</span>,            <span>&#x442;&#x440;&#x438;&#x43B;&#x43B;&#x435;&#x440;</span>                    </td>
                 </tr>
                 <tr>
                     <td class="movie-info-table-key">Director</td>
                     <td class="movie-info-table-value">
-            <span>&#x41A;&#x440;&#x438;&#x441;&#x442;&#x43E;&#x444;&#x435;&#x440; &#x41D;&#x43E;&#x43B;&#x430;&#x43D;</span>
-                    </td>
+            <span>&#x41A;&#x440;&#x438;&#x441;&#x442;&#x43E;&#x444;&#x435;&#x440; &#x41D;&#x43E;&#x43B;&#x430;&#x43D;</span>                    </td>
                 </tr>
                 <tr>
                     <td class="movie-info-table-key">Cast</td>
                     <td class="movie-info-table-value">
-            <span>&#x41A;&#x440;&#x438;&#x441;&#x442;&#x438;&#x430;&#x43D; &#x411;&#x44D;&#x439;&#x43B;</span>
-                ,
-            <span>&#x425;&#x438;&#x442; &#x41B;&#x435;&#x434;&#x436;&#x435;&#x440;</span>
-                ,
-            <span>&#x410;&#x430;&#x440;&#x43E;&#x43D; &#x42D;&#x43A;&#x445;&#x430;&#x440;&#x442;</span>
-                    </td>
+            <span>&#x41A;&#x440;&#x438;&#x441;&#x442;&#x438;&#x430;&#x43D; &#x411;&#x44D;&#x439;&#x43B;</span>,            <span>&#x425;&#x438;&#x442; &#x41B;&#x435;&#x434;&#x436;&#x435;&#x440;</span>,            <span>&#x410;&#x430;&#x440;&#x43E;&#x43D; &#x42D;&#x43A;&#x445;&#x430;&#x440;&#x442;</span>                    </td>
                 </tr>
                 <tr>
                     <td class="movie-info-table-key">Rating</td>
