--- a/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/Index_ForMiddlePage_ReturnsCorrectPagingBar.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/Index_ForMiddlePage_ReturnsCorrectPagingBar.html
@@ -88,26 +88,22 @@
                 <tr>
                     <td class="movie-info-table-key">Countries</td>
                     <td class="movie-info-table-value">
-            <span>N/A</span>
-                    </td>
+            <span>N/A</span>                    </td>
                 </tr>
                 <tr>
                     <td class="movie-info-table-key">Genres</td>
                     <td class="movie-info-table-value">
-            <span>N/A</span>
-                    </td>
+            <span>N/A</span>                    </td>
                 </tr>
                 <tr>
                     <td class="movie-info-table-key">Director</td>
                     <td class="movie-info-table-value">
-            <span>N/A</span>
-                    </td>
+            <span>N/A</span>                    </td>
                 </tr>
                 <tr>
                     <td class="movie-info-table-key">Cast</td>
                     <td class="movie-info-table-value">
-            <span>N/A</span>
-                    </td>
+            <span>N/A</span>                    </td>
                 </tr>
                 <tr>
                     <td class="movie-info-table-key">Rating</td>
@@ -146,26 +142,22 @@
                 <tr>
                     <td class="movie-info-table-key">Countries</td>
                     <td class="movie-info-table-value">
-            <span>N/A</span>
-                    </td>
+            <span>N/A</span>                    </td>
                 </tr>
                 <tr>
                     <td class="movie-info-table-key">Genres</td>
                     <td class="movie-info-table-value">
-            <span>N/A</span>
-                    </td>
+            <span>N/A</span>                    </td>
                 </tr>
                 <tr>
                     <td class="movie-info-table-key">Director</td>
                     <td class="movie-info-table-value">
-            <span>N/A</span>
-                    </td>
+            <span>N/A</span>                    </td>
                 </tr>
                 <tr>
                     <td class="movie-info-table-key">Cast</td>
                     <td class="movie-info-table-value">
-            <span>N/A</span>
-                    </td>
+            <span>N/A</span>                    </td>
                 </tr>
                 <tr>
                     <td class="movie-info-table-key">Rating</td>
