--- a/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToGetControllerTests/ConfirmMovieAdding_ForPrivilegedUserAndMovieWithAllInfoMissing_ReturnsCorrectPage.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToGetControllerTests/ConfirmMovieAdding_ForPrivilegedUserAndMovieWithAllInfoMissing_ReturnsCorrectPage.html
@@ -99,6 +99,12 @@
                     <td class="movie-info-table-key">Duration</td>
                     <td class="movie-info-table-value">N/A</td>
                 </tr>
+                <tr>
+                    <td class="movie-info-table-key">Reference</td>
+                    <td class="movie-info-table-value">
+            <span>Test reference</span>
+                    </td>
+                </tr>
             </tbody>
         </table>
     </div>
@@ -116,6 +122,7 @@
     <input type="hidden" data-val="true" data-val-number="The field RatingValue must be a number." id="RatingValue" name="RatingValue" value="" />
     <input type="hidden" id="RatingVotesNumber" name="RatingVotesNumber" value="" />
     <input type="hidden" id="Duration" name="Duration" value="" />
+    <input type="hidden" id="Reference" name="Reference" value="Test reference" />
     <button class="btn btn-primary" type="submit">Add</button>
     <a class="btn btn-secondary" href="/MoviesToGet">Cancel</a>
 <input name="__RequestVerificationToken" type="hidden" value="Some AFT Value" /></form>
