--- a/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToGetControllerTests/ConfirmMovieDeletion_ForPrivilegedUser_ReturnsCorrectPage.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToGetControllerTests/ConfirmMovieDeletion_ForPrivilegedUser_ReturnsCorrectPage.html
@@ -99,6 +99,12 @@
                     <td class="movie-info-table-key">Duration</td>
                     <td class="movie-info-table-value">02:34</td>
                 </tr>
+                <tr>
+                    <td class="movie-info-table-key">Reference</td>
+                    <td class="movie-info-table-value">
+            <a href="http://www.example.com/">http://www.example.com/</a>
+                    </td>
+                </tr>
             </tbody>
         </table>
             <div class="movie-info-summary">
