--- a/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/Index_ForFirstPage_ReturnsCorrectPagingBar.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/Index_ForFirstPage_ReturnsCorrectPagingBar.html
@@ -110,6 +110,12 @@
                     <td class="movie-info-table-key">Duration</td>
                     <td class="movie-info-table-value">N/A</td>
                 </tr>
+                <tr>
+                    <td class="movie-info-table-key">Reference</td>
+                    <td class="movie-info-table-value">
+            <span>Test reference1</span>
+                    </td>
+                </tr>
             </tbody>
         </table>
     </div>
@@ -163,6 +169,12 @@
                 <tr>
                     <td class="movie-info-table-key">Duration</td>
                     <td class="movie-info-table-value">N/A</td>
+                </tr>
+                <tr>
+                    <td class="movie-info-table-key">Reference</td>
+                    <td class="movie-info-table-value">
+            <span>Test reference2</span>
+                    </td>
                 </tr>
             </tbody>
         </table>
