--- a/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/Index_ForLimitedUser_ReturnsCorrectPage.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/Index_ForLimitedUser_ReturnsCorrectPage.html
@@ -98,6 +98,12 @@
                     <td class="movie-info-table-key">Duration</td>
                     <td class="movie-info-table-value">02:35</td>
                 </tr>
+                <tr>
+                    <td class="movie-info-table-key">Reference</td>
+                    <td class="movie-info-table-value">
+            <span>&#x424;&#x438;&#x43B;&#x44C;&#x43C; &#x448;&#x451;&#x43B; &#x432; &#x43A;&#x438;&#x43D;&#x43E;&#x442;&#x435;&#x430;&#x442;&#x440;&#x430;&#x445;</span>
+                    </td>
+                </tr>
             </tbody>
         </table>
             <div class="movie-info-summary">
@@ -162,6 +168,12 @@
                 <tr>
                     <td class="movie-info-table-key">Duration</td>
                     <td class="movie-info-table-value">N/A</td>
+                </tr>
+                <tr>
+                    <td class="movie-info-table-key">Reference</td>
+                    <td class="movie-info-table-value">
+            <span>N/A</span>
+                    </td>
                 </tr>
             </tbody>
         </table>
