--- a/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/ConfirmMovieAdding_ForInvalidModel_ReturnsCorrectPage.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/ConfirmMovieAdding_ForInvalidModel_ReturnsCorrectPage.html
@@ -58,13 +58,17 @@
 
 
     <form method="post" action="/MoviesToSee/ConfirmMovieAdding">
-        <div class="form-group">
-            <div><span class="text-danger field-validation-error" data-valmsg-for="NewMovieToSee.MovieUri" data-valmsg-replace="true">Please enter movie URL</span></div>
-            <div class="input-group">
-                <div class="input-group-append">
-                    <input class="form-control input-validation-error" placeholder="Movie URL" aria-label="Movie URL" size="40" type="text" data-val="true" data-val-required="Please enter movie URL" id="NewMovieToSee_MovieUri" name="NewMovieToSee.MovieUri" value="" />
-                    <button class="btn btn-primary" type="submit">Add</button>
-                </div>
+        <div><span class="text-danger field-validation-error" data-valmsg-for="NewMovieToSee.MovieUri" data-valmsg-replace="true">Please enter movie URL</span></div>
+        <div><span class="text-danger field-validation-error" data-valmsg-for="NewMovieToSee.Reference" data-valmsg-replace="true">Please enter movie reference</span></div>
+        <div class="form-row">
+            <div class="col">
+                <input class="form-control input-validation-error" placeholder="Movie URL" aria-label="Movie URL" size="40" type="text" data-val="true" data-val-required="Please enter movie URL" id="NewMovieToSee_MovieUri" name="NewMovieToSee.MovieUri" value="" />
+            </div>
+            <div class="col">
+                <input class="form-control input-validation-error" placeholder="Reference" aria-label="Reference" size="40" type="text" data-val="true" data-val-required="Please enter movie reference" id="NewMovieToSee_Reference" name="NewMovieToSee.Reference" value="" />
+            </div>
+            <div class="col">
+                <button class="btn btn-primary" type="submit">Add</button>
             </div>
         </div>
         <input type="hidden" data-val="true" data-val-required="The CurrentPageNumber field is required." id="Paging_CurrentPageNumber" name="Paging.CurrentPageNumber" value="1" />
@@ -115,6 +119,12 @@
                 <tr>
                     <td class="movie-info-table-key">Duration</td>
                     <td class="movie-info-table-value">02:35</td>
+                </tr>
+                <tr>
+                    <td class="movie-info-table-key">Reference</td>
+                    <td class="movie-info-table-value">
+            <span>&#x424;&#x438;&#x43B;&#x44C;&#x43C; &#x448;&#x451;&#x43B; &#x432; &#x43A;&#x438;&#x43D;&#x43E;&#x442;&#x435;&#x430;&#x442;&#x440;&#x430;&#x445;</span>
+                    </td>
                 </tr>
             </tbody>
         </table>
@@ -186,6 +196,12 @@
                 <tr>
                     <td class="movie-info-table-key">Duration</td>
                     <td class="movie-info-table-value">N/A</td>
+                </tr>
+                <tr>
+                    <td class="movie-info-table-key">Reference</td>
+                    <td class="movie-info-table-value">
+            <span>N/A</span>
+                    </td>
                 </tr>
             </tbody>
         </table>
