--- a/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/MarkMovieAsSeen_ForPrivilegedUser_DeletesMovie.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/MoviesToSeeControllerTests/MarkMovieAsSeen_ForPrivilegedUser_DeletesMovie.html
@@ -65,13 +65,17 @@
 
 
     <form method="post" action="/MoviesToSee/ConfirmMovieAdding">
-        <div class="form-group">
-            <div><span class="text-danger field-validation-valid" data-valmsg-for="NewMovieToSee.MovieUri" data-valmsg-replace="true"></span></div>
-            <div class="input-group">
-                <div class="input-group-append">
-                    <input class="form-control" placeholder="Movie URL" aria-label="Movie URL" size="40" type="text" data-val="true" data-val-required="Please enter movie URL" id="NewMovieToSee_MovieUri" name="NewMovieToSee.MovieUri" value="" />
-                    <button class="btn btn-primary" type="submit">Add</button>
-                </div>
+        <div><span class="text-danger field-validation-valid" data-valmsg-for="NewMovieToSee.MovieUri" data-valmsg-replace="true"></span></div>
+        <div><span class="text-danger field-validation-valid" data-valmsg-for="NewMovieToSee.Reference" data-valmsg-replace="true"></span></div>
+        <div class="form-row">
+            <div class="col">
+                <input class="form-control" placeholder="Movie URL" aria-label="Movie URL" size="40" type="text" data-val="true" data-val-required="Please enter movie URL" id="NewMovieToSee_MovieUri" name="NewMovieToSee.MovieUri" value="" />
+            </div>
+            <div class="col">
+                <input class="form-control" placeholder="Reference" aria-label="Reference" size="40" type="text" data-val="true" data-val-required="Please enter movie reference" id="NewMovieToSee_Reference" name="NewMovieToSee.Reference" value="" />
+            </div>
+            <div class="col">
+                <button class="btn btn-primary" type="submit">Add</button>
             </div>
         </div>
         <input type="hidden" data-val="true" data-val-required="The CurrentPageNumber field is required." id="Paging_CurrentPageNumber" name="Paging.CurrentPageNumber" value="1" />
@@ -122,6 +126,12 @@
                 <tr>
                     <td class="movie-info-table-key">Duration</td>
                     <td class="movie-info-table-value">N/A</td>
+                </tr>
+                <tr>
+                    <td class="movie-info-table-key">Reference</td>
+                    <td class="movie-info-table-value">
+            <span>N/A</span>
+                    </td>
                 </tr>
             </tbody>
         </table>
