Upgrade to .NET 10

--- a/tests/MovieLibrary.IntegrationTests/snapshots/UsersControllerTests/EditUser_OfLastAdministratorUnderPrivilegedUser_ReturnsCorrectPage.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/UsersControllerTests/EditUser_OfLastAdministratorUnderPrivilegedUser_ReturnsCorrectPage.html
@@ -65,7 +65,7 @@
             <tr>
                 <td>Administrator</td>
                 <td class="text-center">
-                        <input type="checkbox" disabled="" checked="checked" data-val="true" data-val-required="The Assigned field is required." id="Roles_0__Assigned" name="Roles[0].Assigned" value="true" />
+                        <input type="checkbox" disabled checked="checked" data-val="true" data-val-required="The Assigned field is required." id="Roles_0__Assigned" name="Roles[0].Assigned" value="true" />
                         <input type="hidden" id="Roles_0__Assigned" name="Roles[0].Assigned" value="True" />
                     <input type="hidden" id="Roles_0__RoleName" name="Roles[0].RoleName" value="Administrator" />
                 </td>
