--- a/tests/MovieLibrary.IntegrationTests/snapshots/IdentityTests/GetLogin_ForUnauthenticatedUser_ReturnsCorrectPage.html
+++ b/tests/MovieLibrary.IntegrationTests/snapshots/IdentityTests/GetLogin_ForUnauthenticatedUser_ReturnsCorrectPage.html
@@ -38,7 +38,7 @@
 
 <h1>Log in</h1>
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-lg-6">
         <section>
             <form id="account" method="post">
                 <h2>Use a local account to log in.</h2>
@@ -77,7 +77,7 @@
             <input name="__RequestVerificationToken" type="hidden" value="Some AFT Value" /><input name="Input.RememberMe" type="hidden" value="false" /></form>
         </section>
     </div>
-    <div class="col-md-6 col-md-offset-2">
+    <div class="col-lg-4 col-lg-offset-2">
         <section>
             <h3>Use another service to log in.</h3>
             <hr />
@@ -106,12 +106,12 @@
     
     
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js" crossorigin="anonymous" integrity="sha256-JwUksNJ6/R07ZiLRoXbGeNrtlFZMFDKX4hemPiHOmCA=">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.21.0/jquery.validate.min.js" crossorigin="anonymous" integrity="sha512-KFHXdr2oObHKI9w4Hv1XPKc898mE4kgYx58oqsc/JqqdLMDI4YjOLzom+EMlW8HFUd0QfjfAvxSL6sEq/a42fQ==">
     </script>
-<script>(window.jQuery && window.jQuery.validator||document.write("\u003Cscript src=\u0022/Identity/lib/jquery-validation/dist/jquery.validate.min.js\u0022 crossorigin=\u0022anonymous\u0022 integrity=\u0022sha256-JwUksNJ6/R07ZiLRoXbGeNrtlFZMFDKX4hemPiHOmCA=\u0022\u003E\u003C/script\u003E"));</script>
+<script>(window.jQuery && window.jQuery.validator||document.write("\u003Cscript src=\u0022/Identity/lib/jquery-validation/dist/jquery.validate.min.js\u0022 crossorigin=\u0022anonymous\u0022 integrity=\u0022sha512-KFHXdr2oObHKI9w4Hv1XPKc898mE4kgYx58oqsc/JqqdLMDI4YjOLzom\u002BEMlW8HFUd0QfjfAvxSL6sEq/a42fQ==\u0022\u003E\u003C/script\u003E"));</script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/4.0.0/jquery.validate.unobtrusive.min.js" crossorigin="anonymous" integrity="sha384-DU2a51mTHKDhpXhTyJQ++hP8L9L8Gc48TlvbzBmUof71V7kNVs4ELmaVJKPxcAGn">
     </script>
-<script>(window.jQuery && window.jQuery.validator && window.jQuery.validator.unobtrusive||document.write("\u003Cscript src=\u0022/Identity/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js\u0022 crossorigin=\u0022anonymous\u0022 integrity=\u0022sha384-DU2a51mTHKDhpXhTyJQ\u002B\u002BhP8L9L8Gc48TlvbzBmUof71V7kNVs4ELmaVJKPxcAGn\u0022\u003E\u003C/script\u003E"));</script>
+<script>(window.jQuery && window.jQuery.validator && window.jQuery.validator.unobtrusive||document.write("\u003Cscript src=\u0022/Identity/lib/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.min.js\u0022 crossorigin=\u0022anonymous\u0022 integrity=\u0022sha384-DU2a51mTHKDhpXhTyJQ\u002B\u002BhP8L9L8Gc48TlvbzBmUof71V7kNVs4ELmaVJKPxcAGn\u0022\u003E\u003C/script\u003E"));</script>
 
 
 
